add styling to table body and all tags in index page

--- a/src/index.html
+++ b/src/index.html
@@ -44,11 +44,19 @@
             </tbody>
             <tbody>
                 <tr>
-                    <td colspan="5">
+                    <td colspan="5" class="controls">
                         <button type="button" class="new-data">New Entry</button>
                     </td>
                 </tr>
             </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="5" class="summary">
+                        <strong>Total:</strong>
+                        <span class="total">$0.00</span>
+                    </td>
+                </tr>
+            </tfoot>
         </table>
     </div>
     
