--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div id="budget-app">
-        <table class="budget-tracker">
+        <!-- <table class="budget-tracker">
             <thead>
                 <tr>
                     <th>Date</th>
@@ -58,7 +58,7 @@
                     </td>
                 </tr>
             </tfoot>
-        </table>
+        </table> -->
     </div>
     
 </body>
